Cherry-pick ae8167890120. rdar://problem/112472666

[WebGL] WebGL contexts drawn into canvas contexts are upside-down when premultipliedAlpha is false
    https://bugs.webkit.org/show_bug.cgi?id=259306
    rdar://112472666

    Reviewed by Mike Wyrzykowski and Dean Jackson.

    After the changes in 262518@main, the drawing buffer no longer needs to be
    flipped before creating a native image to be used by drawImage.

    GraphicsContextGL::paintRenderingResultsToPixelBuffer has been updated to take a
    boolean specifying whether the image should be flipped when returning the
    PixelBuffer. This is because the HTMLCanvasElement::getImageData() function,
    used when using a canvas as a source to gl.texImage2D(), still requires the data
    to be flipped.

    Added new tests that exercise both code paths to catch any future regressions.

    * LayoutTests/fast/canvas/webgl/canvas-drawImage-expected.html: Added.
    * LayoutTests/fast/canvas/webgl/canvas-drawImage.html: Added.
    * LayoutTests/fast/canvas/webgl/canvas-getImageData-expected.html: Added.
    * LayoutTests/fast/canvas/webgl/canvas-getImageData.html: Added.
    * Source/WebCore/html/HTMLCanvasElement.cpp:
    (WebCore::HTMLCanvasElement::getImageData):
    * Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
    (WebCore::WebGLRenderingContextBase::paintRenderingResultsToPixelBuffer):
    * Source/WebCore/html/canvas/WebGLRenderingContextBase.h:
    * Source/WebCore/platform/graphics/GraphicsContextGL.h:
    * Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
    (WebCore::GraphicsContextGLANGLE::paintRenderingResultsToPixelBuffer):
    * Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.h:
    * Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
    (WebCore::GraphicsContextGLCocoa::withDrawingBufferAsNativeImage):
    * Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.messages.in:
    * Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGLFunctionsGenerated.h:
    (paintRenderingResultsToPixelBuffer):
    * Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.h:
    * Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxyFunctionsGenerated.cpp:
    (WebKit::RemoteGraphicsContextGLProxy::paintRenderingResultsToPixelBuffer):

    Canonical link: https://commits.webkit.org/266225@main

Identifier: 265870.213@safari-7616-branch